// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sends back a welcome message and instructions message 1`] = `
Object {
  "db": Object {
    "players": Object {
      "facebook": Object {
        "123456": Object {
          "first_name": "Ray",
          "id": 123456,
          "platform": "facebook",
        },
      },
    },
  },
  "results": Object {
    "action": "login",
    "lead": Object {
      "first_name": "Ray",
      "id": 123456,
      "platform": "facebook",
    },
    "messages": Array [
      Object {
        "payload": Object {
          "first_name": "Ray",
          "id": 123456,
          "platform": "facebook",
        },
        "type": "welcome-message",
      },
      Object {
        "type": "instructions-message",
      },
    ],
    "player": undefined,
  },
}
`;

exports[`sends back a welcome message to fifth player and instructions message 1`] = `
Object {
  "db": Object {
    "players": Object {
      "facebook": Object {
        "123456": Object {
          "first_name": "Ray",
          "id": 123456,
          "platform": "facebook",
        },
        "234567": Object {
          "first_name": "Hermon",
          "id": 234567,
          "platform": "facebook",
        },
        "345678": Object {
          "first_name": "Hermes",
          "id": 345678,
          "platform": "facebook",
        },
        "456789": Object {
          "first_name": "Hermshire",
          "id": 456789,
          "platform": "facebook",
        },
        "567890": Object {
          "first_name": "Hermda",
          "id": 567890,
          "platform": "facebook",
        },
      },
    },
  },
  "results": Object {
    "action": "login",
    "lead": Object {
      "first_name": "Hermda",
      "id": 567890,
      "platform": "facebook",
    },
    "messages": Array [
      Object {
        "payload": Object {
          "first_name": "Hermda",
          "id": 567890,
          "platform": "facebook",
        },
        "type": "welcome-message",
      },
      Object {
        "type": "instructions-message",
      },
    ],
    "player": null,
  },
}
`;

exports[`sends back a welcome message to fourth player and instructions message 1`] = `
Object {
  "db": Object {
    "players": Object {
      "facebook": Object {
        "123456": Object {
          "first_name": "Ray",
          "id": 123456,
          "platform": "facebook",
        },
        "234567": Object {
          "first_name": "Hermon",
          "id": 234567,
          "platform": "facebook",
        },
        "345678": Object {
          "first_name": "Hermes",
          "id": 345678,
          "platform": "facebook",
        },
        "456789": Object {
          "first_name": "Hermshire",
          "id": 456789,
          "platform": "facebook",
        },
      },
    },
  },
  "results": Object {
    "action": "login",
    "lead": Object {
      "first_name": "Hermshire",
      "id": 456789,
      "platform": "facebook",
    },
    "messages": Array [
      Object {
        "payload": Object {
          "first_name": "Hermshire",
          "id": 456789,
          "platform": "facebook",
        },
        "type": "welcome-message",
      },
      Object {
        "type": "instructions-message",
      },
    ],
    "player": null,
  },
}
`;

exports[`sends back a welcome message to second player and instructions message 1`] = `
Object {
  "db": Object {
    "players": Object {
      "facebook": Object {
        "123456": Object {
          "first_name": "Ray",
          "id": 123456,
          "platform": "facebook",
        },
        "234567": Object {
          "first_name": "Hermon",
          "id": 234567,
          "platform": "facebook",
        },
      },
    },
  },
  "results": Object {
    "action": "login",
    "lead": Object {
      "first_name": "Hermon",
      "id": 234567,
      "platform": "facebook",
    },
    "messages": Array [
      Object {
        "payload": Object {
          "first_name": "Hermon",
          "id": 234567,
          "platform": "facebook",
        },
        "type": "welcome-message",
      },
      Object {
        "type": "instructions-message",
      },
    ],
    "player": null,
  },
}
`;

exports[`sends back a welcome message to third player and instructions message 1`] = `
Object {
  "db": Object {
    "players": Object {
      "facebook": Object {
        "123456": Object {
          "first_name": "Ray",
          "id": 123456,
          "platform": "facebook",
        },
        "234567": Object {
          "first_name": "Hermon",
          "id": 234567,
          "platform": "facebook",
        },
        "345678": Object {
          "first_name": "Hermes",
          "id": 345678,
          "platform": "facebook",
        },
      },
    },
  },
  "results": Object {
    "action": "login",
    "lead": Object {
      "first_name": "Hermes",
      "id": 345678,
      "platform": "facebook",
    },
    "messages": Array [
      Object {
        "payload": Object {
          "first_name": "Hermes",
          "id": 345678,
          "platform": "facebook",
        },
        "type": "welcome-message",
      },
      Object {
        "type": "instructions-message",
      },
    ],
    "player": null,
  },
}
`;

exports[`welcomes back a player 1`] = `
Object {
  "db": Object {
    "players": Object {
      "facebook": Object {
        "123456": Object {
          "id": 123456,
          "platform": "facebook",
        },
      },
    },
  },
  "results": Object {
    "action": "login",
    "lead": Object {
      "id": 123456,
      "platform": "facebook",
    },
    "messages": Array [
      Object {
        "payload": Object {
          "lead": Object {
            "id": 123456,
            "platform": "facebook",
          },
          "player": Object {
            "first_name": "Ray",
            "id": 123456,
            "platform": "facebook",
          },
        },
        "type": "welcome-back-message",
      },
    ],
    "player": Object {
      "first_name": "Ray",
      "id": 123456,
      "platform": "facebook",
    },
  },
}
`;
